gespeaker (0.1-1) jaunty; urgency=low

  * Initial release

 -- Muflone <muflone@vbsimple.net>  Sat, 13 Jun 2009 00:00:00 +0100
